--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
 			font-family: var(--sans-serif);
 			font-size: var(--font-size-default);
 			line-height: 1.55;
-		}
-
-		header {
-			margin-top: var(--gutter-edge);
+			margin: 0;
 		}
 
 		header,
